--- a/szablon.html
+++ b/szablon.html
@@ -91,7 +91,7 @@
                 <td
                     style="padding: 20px 5%; border: unset;">
                     <p
-                        style="margin: 0;float: left; color: white; font-size: 18px; line-height: 1.2; font-weight: 500;">
+                        style="margin: 0;float: left; color: white; font-size: 18px; line-height: 1.2; font-weight: 500; max-width: 68%;">
                         <span
                             style="margin:0 ; font-weight: 800; display: block;">
                             GroupDM Sp. z
@@ -105,7 +105,7 @@
                             style="margin:0 ; display: block;">
                             01-793 Warszawa</span>
                     </p>
-                    <img style="display: block; margin-left: auto"
+                    <img style="display: block; margin-left: auto; max-width: 30%;"
                         src="https://sklep427529.shoparena.pl/skins/user/rwd_shoper_3/images/user/dmstore_foot.png?1666205243"
                         alt="DM logo">
                 </td>
